--- a/cs-law-spa-pwa/src/components/Hero/Hero.css
+++ b/cs-law-spa-pwa/src/components/Hero/Hero.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
 .hero {
   background-color: #C0C0C0;
   color: #fff;
@@ -10,6 +12,22 @@
   background-size: cover; /* Cover ensures the image covers the entire section */
   background-position: center; /* Centers the background image */
   background-repeat: no-repeat; /* Prevents the image from repeating */
+}
+
+.hero h1 {
+  font-family: 'Playfair Display', serif; /* Example: Using Google Fonts */
+  font-size: 2.5rem; /* Responsive font size */
+  font-weight: 700; /* Bold weight for better emphasis */
+  color: #003366; /* Ensure high contrast for readability */
+  text-shadow: 
+  -1px -1px 0 #fff,  
+   1px -1px 0 #fff,
+  -1px  1px 0 #fff,
+   1px  1px 0 #fff, /* Outline effect */
+   2px 2px 4px rgba(0, 0, 0, 0.7); /* Drop shadow */
+  letter-spacing: 1px; /* Improved spacing */
+  line-height: 1.2; /* Adjusted line height for better readability */
+  margin: 0 0 20px 0; /* Adjusted margin for spacing between the heading and subtext */
 }
 
 .button {
@@ -28,24 +46,19 @@
 
 /* Styles for devices smaller than 576px */
 @media (max-width: 575.98px) { 
-  .hero {
-    /* Adjustments for small screens (e.g., font size, padding) */
-    font-size: 14px;
-  }
   .hero h1 {
-    font-size: 24px;
-    font-weight: bold;
+    /* Adjustments for small screens (e.g., font size, padding) */
+    font-size: 2.5rem;
   }
 }
 
 /* Small devices (phones, 576px and up) */
 @media (min-width: 576px) {
   .hero {
-    /* Adjust styles for smaller devices */
   }
+
   .hero h1 {
-    font-size: 32px;
-    font-weight: bold;
+    font-size: 3.5rem;
   }
 }
 
@@ -55,8 +68,7 @@
     /* Adjust styles for medium devices */
   }
   .hero h1 {
-    font-size: 42px;
-    font-weight: bold;
+    font-size: 4.5rem;
   }
 }
 
@@ -73,8 +85,7 @@
     /* Adjust styles for extra large devices */
   }
   .hero h1 {
-    font-size: 60px;
-    font-weight: bold;
+    font-size: 5.5rem;
   }
 }
 
