--- a/cs-law-spa-pwa/src/components/Footer/Footer.css
+++ b/cs-law-spa-pwa/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  background-color: #4D4D4D;
+  background-color: #003366;
   color: white;
   font-size: 10px;
   width: 100vw;
@@ -17,7 +17,7 @@ margin-right: auto;
 .footer-image {
   width: 75px;
   height: 50px;
-  padding-top: 5px;
+  padding-top: 20px;
 }
 
 .footer-info {
