--- a/cs-law-spa-pwa/src/components/Contact/Contact.css
+++ b/cs-law-spa-pwa/src/components/Contact/Contact.css
@@ -13,15 +13,21 @@
   text-align: center; /* Center align text for better readability */
 }
 
+.about-content {
+  max-width: 800px; /* Limit maximum width of content */
+}
+
 .contact h2 {
   color: #003366;
   font-size: 2.625rem; /* Adjusted font size for better readability */
   margin-bottom: 20px; /* Added margin bottom for separation */
+  text-align: center;
 }
 
 .contact p {
   margin-bottom: 20px; /* Added margin bottom for separation */
-  font-size: 1.5rem; /* Adjusted font size for better readability */
+  font-size: 1.125rem; /* Adjusted for better readability */
+  line-height: 1.6; /* Increase line spacing for better readability */
 }
 
 .contact a {
