--- a/cs-law-spa-pwa/src/components/Contact/Contact.css
+++ b/cs-law-spa-pwa/src/components/Contact/Contact.css
@@ -1,12 +1,10 @@
-.contact {
+.contact-section {
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px;
-  box-sizing: border-box; /* Ensure padding doesn't affect overall width */
 }
 
 .about-content {
@@ -14,21 +12,21 @@
   text-align: center; /* Center align text for better readability */
 }
 
-.contact h2 {
+.contact-section h2 {
   color: #003366;
   font-size: 2.625rem; /* Adjusted font size for better readability */
   margin-bottom: 20px; /* Added margin bottom for separation */
   text-align: center;
 }
 
-.contact p {
+.contact-section p {
   margin-bottom: 20px; /* Added margin bottom for separation */
-  font-size: 1.125rem; /* Adjusted for better readability */
+  font-size: 1.5rem; /* Adjusted for better readability */
   line-height: 1.6; /* Increase line spacing for better readability */
 }
 
 .contact a {
-  color: #0056b3;
+  color: #003366;
   text-decoration: none;
   transition: text-decoration 0.3s ease; /* Smooth transition for text-decoration */
 }
