refractor and styling

--- a/cs-law-spa-pwa/src/components/Contact/Contact.css
+++ b/cs-law-spa-pwa/src/components/Contact/Contact.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff; /* Light grey background for subtle contrast */
+  background-color: #ffffff;
 }
 
 .contact-content {
