--- a/cs-law-spa-pwa/src/index.css
+++ b/cs-law-spa-pwa/src/index.css
@@ -44,13 +44,12 @@ a:hover {
     flex-direction: row;
     justify-content: space-between;
   }
-
+}
 /* Desktops (1024px and above) */
 @media (min-width: 1024px) {
   body {
     padding: 0;
   }
-
   .section {
     padding: 0;
   }
@@ -62,15 +61,12 @@ a:hover {
     max-width: 100vw;
     margin: 0;
   }
-
   .footer {
     font-size: 16px;
   }
-
   h1, h2, h3 {
     margin-bottom: 30px;
   }
-
   .navbar {
     margin-left: 150px;
     margin-right: 2em;
