--- a/cs-law-spa-pwa/src/components/Contact/Contact.css
+++ b/cs-law-spa-pwa/src/components/Contact/Contact.css
@@ -1,10 +1,15 @@
 .contact-section {
   min-height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff;
+  background-color: #003366;
+}
+.contact-image {
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 .contact-content {
@@ -12,7 +17,7 @@
 }
 
 .contact-section h2 {
-  color: #003366;
+  color: #ffffff;
   font-size: 2.625rem; /* Adjusted font size for better readability */
   margin-bottom: 20px; /* Added margin bottom for separation */
   text-align: center;
@@ -23,10 +28,11 @@
   font-size: 1.5rem; /* Adjusted for better readability */
   line-height: 1.6; /* Increase line spacing for better readability */
   text-align: center;
+  color: #fefefe
 }
 
 .contact-section a {
-  color: #003366;
+  color: #ffffff;
   text-decoration: none;
   transition: text-decoration 0.3s ease; /* Smooth transition for text-decoration */
 }
