--- a/cs-law-spa-pwa/src/components/Footer/Footer.css
+++ b/cs-law-spa-pwa/src/components/Footer/Footer.css
@@ -3,12 +3,15 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  background-color: #003366;
+  background-color: #ffffff;
   color: white;
   font-size: 10px;
   width: 100vw;
 }
 
+.footer p {
+  color: #003366;
+}
 .footer-logo {
 margin-right: auto;
 }
@@ -22,4 +25,5 @@ margin-right: auto;
 .footer-info {
 margin-right: auto;
 padding-top: 10px;
+color: #003366;
 }
