--- a/cs-law-spa-pwa/src/components/Hero/Hero.css
+++ b/cs-law-spa-pwa/src/components/Hero/Hero.css
@@ -14,20 +14,9 @@
   background-repeat: no-repeat; /* Prevents the image from repeating */
 }
 
-.hero h1 {
-  font-family: 'Playfair Display', serif; /* Example: Using Google Fonts */
-  font-size: 2.5rem; /* Responsive font size */
-  font-weight: 700; /* Bold weight for better emphasis */
-  color: #003366; /* Ensure high contrast for readability */
-  text-shadow: 
-  -1px -1px 0 #fff,  
-   1px -1px 0 #fff,
-  -1px  1px 0 #fff,
-   1px  1px 0 #fff, /* Outline effect */
-   2px 2px 4px rgba(0, 0, 0, 0.7); /* Drop shadow */
-  letter-spacing: 1px; /* Improved spacing */
-  line-height: 1.2; /* Adjusted line height for better readability */
-  margin: 0 0 20px 0; /* Adjusted margin for spacing between the heading and subtext */
+.hero-image {
+  width: 250px;
+  height: 200px;
 }
 
 .button {
