--- a/cs-law-spa-pwa/src/components/Law-Services/LawServices.css
+++ b/cs-law-spa-pwa/src/components/Law-Services/LawServices.css
@@ -11,7 +11,9 @@
 
 .lawServices h2 {
   color: #ffffff;
-  font-size: 42px
+  font-size: 2.625rem; /* Adjusted font size for better readability */
+  margin-bottom: 20px; /* Added margin bottom for separation */
+  text-align: center;
 }
 
 .services-grid {
