card redesign and refractor

--- a/cs-law-spa-pwa/src/components/About/About.css
+++ b/cs-law-spa-pwa/src/components/About/About.css
@@ -16,6 +16,12 @@
   font-size: 2.625rem; /* Adjusted for better readability */
   margin-bottom: 20px; /* Added margin bottom for separation */
   text-align: center;
+  padding-right: 15px;
+}
+
+.about-icon {
+  height: 32px;
+  padding-right: 15px;
 }
 
 .about-content {
