--- a/cs-law-spa-pwa/src/components/Calendly/Calendly.css
+++ b/cs-law-spa-pwa/src/components/Calendly/Calendly.css
@@ -1,6 +1,10 @@
 .calendly {
 }
 
+.calendly-section-icon {
+  height: 32px;
+}
+
 .calendly-section h2 {
   color: #003366;
   font-size: 2.625rem; /* Adjusted font size for better readability */
