--- a/cs-law-spa-pwa/src/components/Calendly/Calendly.css
+++ b/cs-law-spa-pwa/src/components/Calendly/Calendly.css
@@ -1,6 +1,13 @@
 .calendly {
 }
-
+.calendly-section {
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .calendly-section-icon {
   height: 32px;
 }
