--- a/cs-law-spa-pwa/src/components/Calendly/Calendly.css
+++ b/cs-law-spa-pwa/src/components/Calendly/Calendly.css
@@ -1,4 +1,5 @@
 .calendly {
+  
 }
 .calendly-section {
   min-height: 100vh;
@@ -7,13 +8,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #003366;
 }
 .calendly-section-icon {
   height: 32px;
 }
 
 .calendly-section h2 {
-  color: #003366;
+  color: #FFD700;
   font-size: 2.625rem; /* Adjusted font size for better readability */
   margin-bottom: 20px; /* Added margin bottom for separation */
   text-align: center;
