--- a/cs-law-spa-pwa/src/components/Contact/Contact.css
+++ b/cs-law-spa-pwa/src/components/Contact/Contact.css
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #003366;
+  background-color: #ffffff;
+  color: #ffffff;
 }
 .contact-icon {
   height: 32px;
@@ -22,13 +23,13 @@
 .contact-card {
   display: grid;
   justify-content: center;
-  background: #ffffff;
+  background: #003366;
   padding: 0.5em 1em; /* Add padding for better click area */
   border-radius: 5px;
 }
 
 .contact h2 {
-  color: #ffffff;
+  color: #003366;
   font-size: 2.625rem; /* Adjusted font size for better readability */
   text-align: center;
 }
@@ -38,10 +39,9 @@
   font-size: 1.5rem; /* Adjusted for better readability */
   line-height: 1.6; /* Increase line spacing for better readability */
   text-align: center;
-  color: #fefefe
 }
 
-.contact-section a {
+.contact a :hover {
   color: #ffffff;
   text-decoration: none;
   transition: text-decoration 0.3s ease; /* Smooth transition for text-decoration */
@@ -49,5 +49,17 @@
 
 .contact-section a:hover,
 .contact-section a:focus {
-  text-decoration: underline; /* Adds underline on hover/focus for accessibility */
+  text-decoration: underline;
+  color: #FFD700; /* Adds underline on hover/focus for accessibility */
+}
+
+.address a {
+  color: #ffffff;
+  text-decoration: none;
+  transition: text-decoration 0.3s ease; /* Smooth transition for text-decoration */
+}
+.address :hover {
+  color: #FFD700;
+  text-decoration: none;
+  transition: text-decoration 0.3s ease; /* Smooth transition for text-decoration */
 }
