style and content changes

--- a/cs-law-spa-pwa/src/components/Law-Services/LawServices.css
+++ b/cs-law-spa-pwa/src/components/Law-Services/LawServices.css
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding: 40px;
 }
 
 .law-services h1 {
@@ -144,10 +143,10 @@
   margin-top: 60px;
 }
 
-.criminal-defense p,
 .criminal-defense h2,
 .criminal-defense h3 {
   color: #003366;
+  font-weight: bolder;
 }
 .criminal-defense h3 {
   margin-top: 2em;
@@ -211,10 +210,10 @@
   margin-top: 60px;
 }
 
-.estate-planning p,
 .estate-planning h2,
 .estate-planning h3 {
   color: #003366;
+  font-weight: bolder;
 }
 .estate-planning h3{
   margin-top: 2em;
