--- a/cs-law-spa-pwa/src/components/Calendly/Calendly.css
+++ b/cs-law-spa-pwa/src/components/Calendly/Calendly.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background-color: #003366;
+  padding-bottom: 5em;
 }
 .calendly-section-icon {
   height: 32px;
@@ -20,3 +21,19 @@
   margin-bottom: 20px; /* Added margin bottom for separation */
   text-align: center;
 }
+
+.calendly-widget
+ {
+  height: 500px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  padding-top: .25em;
+  padding-bottom: .25em;
+ }
+ .calendly-widget-bottom {
+  background-color: #003366;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ }
