--- a/cs-law-spa-pwa/src/components/Contact/Contact.css
+++ b/cs-law-spa-pwa/src/components/Contact/Contact.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   align-items: center;
   background-color: #ffffff;
-  color: #ffffff;
 }
 .contact-icon {
   height: 32px;
@@ -23,15 +22,18 @@
 .contact-card {
   display: grid;
   justify-content: center;
+  color: #ffffff;
   background: #003366;
-  padding: 0.5em 1em; /* Add padding for better click area */
+  padding: 1.3em;
   border-radius: 5px;
 }
 
 .contact h2 {
-  color: #003366;
-  font-size: 2.625rem; /* Adjusted font size for better readability */
   text-align: center;
+  font-size: 2.625rem;
+  font-weight: bold;
+  color: #003366;
+  padding-top: 1.75em;
 }
 
 .contact-section p {
